# BobbysBurden

./: .gitignore  BobbysBurden.sln  CMakeLists.txt  CMakePresets.json
BobbysBurden/: BobbysBurden.vcxproj
BobbysBurden/assets/: blueprintAssets.json  inventory_proto1.aseprite  textureAtlas00.json  textureAtlas00.psd  textureAtlas02.json  textureAtlas03.json  textureAtlas04.json  textureAtlas06.json  textureAtlas07.json  textureAtlasAssets.json
BobbysBurden/assets/config/: BeginGamePrimerFile.json  Source.yaml  gameConfig.json  gameScenes.json
BobbysBurden/assets/gameObjectDefinitions/: backRooms.json  bobbysObjects.json  bobbysRoomFurniture.json  commonObjects.json  containerObjects.json  detachedRooms.json  doorObjects.json  drawerObjects.json  enemyObjects.json  environmentObjects.json  frontRooms.json  furnitureObjects.json  ghostObjects.json  guiObjects.json  houseObjects.json  householdObjects.json  inventoryObjects.json  lightFixtureObjects.json  lightObjects.json  particleObjects.json  playerObjects.json  puzzleObjects.json  puzzlePieceObjects.json  roomStudyObjects.json  shelfObjects.json  testObjects.json  wallBackgroundObjects.json
BobbysBurden/assets/levels/: full_interior_definition.json  test_box2d3_definition.json  test_definition.json
BobbysBurden/assets/sound/: soundAssets.json
BobbysBurden/src/: BBColorMap.cpp  BBComponentFactory.cpp  BBComponentFactory.h  BBContactFilter.cpp  BBContactFilter.h  BBContactHandler.cpp  BBContactHandler.h  BBContactListener.cpp  BBContactListener.h  BBContextManager.h  BBEnumMap.cpp  BBEnviornmentEvents.h  BBEnvironmentEvents.h  BBGame.cpp  BBGame.h  BBGameStateManager.cpp  BBNavigationManager.cpp  BBNavigationManager.h  GameConstants.h  blindBetty.cpp
BobbysBurden/src/IMGui/: BB_IMGuiFactory.cpp  BB_IMGuiUtil.cpp  BB_IMGuiUtil.h  IMGuiBobbyHideMenu.cpp  IMGuiDynamicInterfaceMenu.cpp  IMGuiDynamicInterfaceMenu.h  IMGuiGoUpDownMenu.cpp  IMGuiInteractiveMenuDoor.cpp  IMGuiItemContact.cpp  IMGuiItemContact.h  IMGuiItemDescription.cpp  IMGuiItemDescription.h  IMGuiOnOffToggleMenu.cpp  IMGuiOnOffToggleMenu.h  IMGuiOpenCloseDoorMenu.cpp  IMGuiOpenCloseDoorMenu.h  IMGuiOpenCloseMenu.cpp  IMGuiOpenCloseMenu.h  IMGuiOpenCloseReceptacleMenu.cpp  IMGuiOpenCloseReceptacleMenu.h  IMGuiPauseWindow.cpp  IMGuiProximityHintMenu.h  IMGuiShelfMenu.cpp  IMGuiTitleScreenMenu.cpp
BobbysBurden/src/actions/: ActorMoveAction.cpp  ActorStairsMoveAction.cpp  BBActionFactory.cpp  BBActionFactory.h  BobbyMoveAction.cpp  BobbyMoveAction.h  DisableProximityHintAction.cpp  DisableProximityHintAction.h  DoorCloseAction.cpp  DoorEnterAction.cpp  DoorEnterAction.h  DoorOpenAction.cpp  DoorToggleAction.cpp  DoorToggleAction.h  HideAction.cpp  HideAction.h  HideHintEffectAction.cpp  HideHintEffectAction.h  HideInterfaceAction.cpp  HideInterfaceAction.h  HideUnderBedAction.cpp  HideUnderBedAction.h  ItemDragTreatmentAction.cpp  ItemDragTreatmentAction.h  ItemDropAction.cpp  ItemDropAction.h  OilBedKnobAction.cpp  OilBedKnobAction.h  PlayCutSceneAction.cpp  PlayCutSceneAction.h  PlayPhonographAction.cpp  PlayPhonographAction.h  PushGuestBedButtonAction.cpp  PushGuestBedButtonAction.h  (+18 more)
assets/: blueprintAssets.json  fontAssets.json  mouseCursors.json  textureAtlas01.json  textureAtlas04.json  textureAtlas05.json  textureAtlas07.json
assets/config/: gameConfig.json
assets/gameObjectDefinitions/: bobbysRoomFurniture.json  commonObjects.json  frontRooms.json  ghostObjects.json  guiObjects.json  houseObjects.json  householdObjects.json  playerObjects.json  puzzleObjects.json
assets/levels/: full_interior_definition.json  test_definition.json
assets/sound/: soundAssets.json
src/: BBColorMap.cpp  BBComponentFactory.cpp  BBContactFilter.cpp  BBContactHandler.cpp  BBContextManager.cpp  BBEnumMap.cpp  BBGame.cpp  BBGame.h  BBGameStateManager.cpp  BBGameStateManager.h  BBNavigationManager.cpp  GameConstants.h  GameGlobals.cpp  GameGlobals.h
src/IMGui/: BB_IMGuiFactory.cpp  BB_IMGuiFactory.h  BB_IMGuiUtil.cpp  BB_IMGuiUtil.h  IMGuiBobbyHideMenu.cpp  IMGuiBobbyHideMenu.h  IMGuiDynamicInterfaceMenu.cpp  IMGuiDynamicInterfaceMenu.h  IMGuiGoUpDownMenu.cpp  IMGuiGoUpDownMenu.h  IMGuiItemContact.cpp  IMGuiOnOffToggleMenu.cpp  IMGuiOnOffToggleMenu.h  IMGuiOpenCloseDoorMenu.cpp  IMGuiOpenCloseReceptacleMenu.cpp  IMGuiPauseWindow.cpp  IMGuiPlayerDeath.cpp  IMGuiProximityHintMenu.cpp  IMGuiShelfMenu.cpp  IMGuiShelfMenu.h  IMGuiTestLevelMenu.cpp  IMGuiTitleScreenMenu.cpp  IMGuiTitleScreenMenu.h
src/actions/: BBActionFactory.cpp  DoorEnterAction.cpp  DoorEnterAction.h  DoorToggleAction.cpp  DoorToggleAction.h  GhostMoveAction.cpp  GhostMoveAction.h  ItemDragTreatmentAction.cpp  ItemDragTreatmentAction.h  ItemDropAction.cpp  ItemDropAction.h  PushGuestBedButtonAction.cpp  PushGuestBedButtonAction.h  ScareBobbyAction.cpp  ScareBobbyAction.h  ShowInterfaceAction.cpp  ShowInterfaceAction.h  ToggleBobbyEquipAction.cpp  ToggleBobbyEquipAction.h  ToggleBobbyInventory.cpp  TwistBedKnobAction.h
src/components/: BBEnvironmentComponent.cpp  BBEnvironmentComponent.h  BBGhostBrainComponent.cpp  BBGhostBrainComponent.h  BBInterfaceComponent.cpp  BBMaskedOverlayComponent.cpp  BBStateComponent.cpp  BobbyPlayerControlComponent.cpp  BobbyPlayerControlComponent.h
src/cutScenes/: BBCutSceneFactory.h
src/environmentEvents/: BBEnvironmentEventFactory.cpp  LightningBoltEvent.cpp  LightningEvent.cpp  LightningEvent.h  LightningMaker.cpp  LightningWindowFlashEvent.cpp  RainEvent.cpp  RainEvent.h
src/puzzles/: BBPuzzleFactory.cpp  ClownPicturePuzzle.cpp  IndianStatuePuzzle.h  KillSpiderPuzzle.h  MermaidMantlePuzzle.cpp  OilBedKnobPuzzle.h  SkullPuzzle.cpp  SkullPuzzle.h
src/triggers/: PlayerDeath.cpp
(+47 files in other folders)
